--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <input type="text" name="firstname" placeholder="Веддіть своє ім'я"><Br>
             <input type="text" name="secondname" placeholder="Веддіть своє прізвище"><Br>
             <p>Виберіть стілець :</p>       
-            <input type="radio" name="answer" value="a1">Без пік точених<Br>
-            <input type="radio" name="answer" value="a1">З піками точеними<Br>
-            <input type="radio" name="answer" value="a1">Візьму піки точені і зрубаю !№;%:*<Br>
+            <input type="radio" name="answer" value="a1"><label for="input">Без пік точених</label><Br>
+            <input type="radio" name="answer" value="a1"><label for="input">З піками точеними</label><Br>
+            <input type="radio" name="answer" value="a1"><label for="input">Візьму піки точені і зрубаю !№;%:*</label><Br>
             <p>
                 <textarea cols="30" placeholder="Веддіть коментарій" rows="7"></textarea>
             </p>
@@ -73,8 +73,8 @@
                 <option value="Шо поделать">Буду жити в Бікіні Боттом</option>
             </select><br>
             Оцінити роботу<br>
-            <input type="checkbox" name="answer" value="a1">Плюс<Br>
-            <input type="checkbox" name="answer" value="a1">Буду жити в Бікіні Боттом<Br>
+            <input type="checkbox" name="answer" value="a1"><label for="input">Плюс</label><Br>
+            <input type="checkbox" name="answer" value="a1"><label for="input">Буду жити в Бікіні Боттом</label><Br>
             <div class="block3">
                 <a href="https://rozetka.com.ua/64973489/p64973489/" ><button>Збільшити свою самооцінку</button></p></a>
             </div>    
