--- a/index.html
+++ b/index.html
@@ -6,80 +6,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HW2 "ПОГРУЖЕНИЕ"</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <section class="home__work">
         <video class="video" loop="loop" autoplay="" muted="">
-                <source src="video/ocean.mp4" type="video/mp4">
-                <source src="video/ocean.webm" type="video/webm">
-            </video>
-    <section class="table">
-        <div class="container">
-            <h1>HW#2 Taras Kravets</h1>
-            <table class="table__inner">
-                   <tr>
-                       <th>Ім'я</th>
-                       <th>Прізвище</th>
-                       <th>Номер телефону</th>
-                       <th>Telegram</th>
-                   </tr>
-                   <tr>
-                       <td>Тарас</td>
-                       <td>Кравець</td>
-                       <td>+380504343567</td>
-                       <td>@upal_namo4enyi</td>
-                   </tr>
-                   <tr>
-                       <td>Nazar</td>
-                       <td>Yanchishin</td>
-                       <td>+380676754450</td>
-                       <td>@ichpuk</td>
-                   </tr>
-                   <tr>
-                       <td>Nadiia</td>
-                       <td>Kozhushko</td>
-                       <td>+380977557321</td>
-                       <td>Нікнейм відсутній</td>
-                   </tr>
-                   <tr>
-                       <td>Vasyl</td>
-                       <td>Muran</td>
-                       <td>+380975776843</td>
-                       <td>Нікнейм відсутній</td>
-                   </tr>
-                   <tr>
+            <source src="video/ocean.mp4" type="video/mp4">
+            <source src="video/ocean.webm" type="video/webm">
+        </video>
+        <section class="table">
+            <div class="container">
+                <h1>HW#2 Taras Kravets</h1>
+                <table class="table__inner">
+                    <tr>
+                        <th>Ім'я</th>
+                        <th>Прізвище</th>
+                        <th>Номер телефону</th>
+                        <th>Telegram</th>
+                    </tr>
+                    <tr>
+                        <td>Тарас</td>
+                        <td>Кравець</td>
+                        <td>+380504343567</td>
+                        <td>@upal_namo4enyi</td>
+                    </tr>
+                    <tr>
+                        <td>Nazar</td>
+                        <td>Yanchishin</td>
+                        <td>+380676754450</td>
+                        <td>@ichpuk</td>
+                    </tr>
+                    <tr>
+                        <td>Nadiia</td>
+                        <td>Kozhushko</td>
+                        <td>+380977557321</td>
+                        <td>Нікнейм відсутній</td>
+                    </tr>
+                    <tr>
+                        <td>Vasyl</td>
+                        <td>Muran</td>
+                        <td>+380975776843</td>
+                        <td>Нікнейм відсутній</td>
+                    </tr>
+                    <tr>
                         <td>Maryna</td>
                         <td>Humeniuk</td>
                         <td>+38097545697</td>
                         <td>@humeniuk_marina</td>
                     </tr>
-            </table>
-            <input type="text" name="firstname" placeholder="Веддіть своє ім'я"><Br>
-            <input type="text" name="secondname" placeholder="Веддіть своє прізвище"><Br>
-            <p>Виберіть стілець :</p>       
-            <input type="radio" name="answer" value="a1"><label for="input">Без пік точених</label><Br>
-            <input type="radio" name="answer" value="a1"><label for="input">З піками точеними</label><Br>
-            <input type="radio" name="answer" value="a1"><label for="input">Візьму піки точені і зрубаю !№;%:*</label><Br>
-            <p>
-                <textarea cols="30" placeholder="Веддіть коментарій" rows="7"></textarea>
-            </p>
-            <select name="Оберіть місто">
-                <option value="city" selected disabled hidden>Оберіть місто</option>
-                <option value="Львів">Бікіні Боттом</option>
-                <option value="Не Львів">Шкода що не Бікіні Боттом</option>
-                <option value="Шо поделать">Буду жити в Бікіні Боттом</option>
-            </select><br>
-            Оцінити роботу<br>
-            <input type="checkbox" name="answer" value="a1"><label for="input">Плюс</label><Br>
-            <input type="checkbox" name="answer" value="a1"><label for="input">Буду жити в Бікіні Боттом</label><Br>
-            <div class="block3">
-                <a href="https://rozetka.com.ua/64973489/p64973489/" ><button>Збільшити свою самооцінку</button></p></a>
-            </div>    
-        </div>
+                </table>
+                <form class="form">
+                    <span><input type="text" name="firstname" placeholder="Веддіть своє ім'я"></span>
+                    <span><input type="text" name="secondname" placeholder="Веддіть своє прізвище"></span>
+                    <p>Виберіть стілець :</p>
+                    <span><input id="first-answer" type="radio" name="answer" value="a1"><label for="first-answer">Без
+                            пік
+                            точених</label></span>
+                    <span><input id="second-answer" type="radio" name="answer" value="a1"><label for="second-answer">З
+                            піками
+                            точеними</label></span>
+                    <span><input id="third-answer" type="radio" name="answer" value="a1"><label
+                            for="third-answer">Візьму піки
+                            точені і зрубаю !№;%:*</label></span>
+                    <p>
+                        <textarea cols="30" placeholder="Веддіть коментарій" rows="7"></textarea>
+                    </p>
+                    <select name="Оберіть місто">
+                        <option value="city" selected disabled hidden>Оберіть місто</option>
+                        <option value="Львів">Бікіні Боттом</option>
+                        <option value="Не Львів">Шкода що не Бікіні Боттом</option>
+                        <option value="Шо поделать">Буду жити в Бікіні Боттом</option>
+                    </select>
+                    <p>
+                        Оцінити роботу
+                    </p>
+                    <span><input id="first-answer__checkbox" type="checkbox" name="answer" value="a1"><label
+                            for="first-answer__checkbox">Плюс</label></span>
+                    <span><input id="second-answer__checkbox" type="checkbox" name="answer" value="a1"><label
+                            for="second-answer__checkbox">Буду жити в Бікіні Боттом</label></span>
+                    <div class="block3">
+                        <a href="https://rozetka.com.ua/64973489/p64973489/"><button>Збільшити свою самооцінку</button>
+                            </p></a>
+                    </div>
+                </form>
+            </div>
+        </section>
     </section>
-</section>    
 </body>
+
 </html>
