--- a/index.html
+++ b/index.html
@@ -58,18 +58,18 @@
                     </tr>
                 </table>
                 <form class="form">
-                    <span><input type="text" name="firstname" placeholder="Веддіть своє ім'я"></span>
-                    <span><input type="text" name="secondname" placeholder="Веддіть своє прізвище"></span>
+                    <div><input type="text" name="firstname" placeholder="Веддіть своє ім'я"></div>
+                    <div><input type="text" name="secondname" placeholder="Веддіть своє прізвище"></div>
                     <p>Виберіть стілець :</p>
-                    <span><input id="first-answer" type="radio" name="answer" value="a1"><label for="first-answer">Без
+                    <div><input id="first-answer" type="radio" name="answer" value="a1"><label for="first-answer">Без
                             пік
-                            точених</label></span>
-                    <span><input id="second-answer" type="radio" name="answer" value="a1"><label for="second-answer">З
+                            точених</label></div>
+                    <div><input id="second-answer" type="radio" name="answer" value="a1"><label for="second-answer">З
                             піками
-                            точеними</label></span>
-                    <span><input id="third-answer" type="radio" name="answer" value="a1"><label
+                            точеними</label></div>
+                    <div><input id="third-answer" type="radio" name="answer" value="a1"><label
                             for="third-answer">Візьму піки
-                            точені і зрубаю !№;%:*</label></span>
+                            точені і зрубаю !№;%:*</label></div>
                     <p>
                         <textarea cols="30" placeholder="Веддіть коментарій" rows="7"></textarea>
                     </p>
@@ -82,10 +82,10 @@
                     <p>
                         Оцінити роботу
                     </p>
-                    <span><input id="first-answer__checkbox" type="checkbox" name="answer" value="a1"><label
-                            for="first-answer__checkbox">Плюс</label></span>
-                    <span><input id="second-answer__checkbox" type="checkbox" name="answer" value="a1"><label
-                            for="second-answer__checkbox">Буду жити в Бікіні Боттом</label></span>
+                    <div><input id="first-answer__checkbox" type="checkbox" name="answer" value="a1"><label
+                            for="first-answer__checkbox">Плюс</label></div>
+                    <div><input id="second-answer__checkbox" type="checkbox" name="answer" value="a1"><label
+                            for="second-answer__checkbox">Буду жити в Бікіні Боттом</label></div>
                     <div class="block3">
                         <a href="https://rozetka.com.ua/64973489/p64973489/"><button>Збільшити свою самооцінку</button>
                             </p></a>
