--- a/index.html
+++ b/index.html
@@ -60,16 +60,13 @@
                 <form class="form">
                     <div><input type="text" name="firstname" placeholder="Веддіть своє ім'я"></div>
                     <div><input type="text" name="secondname" placeholder="Веддіть своє прізвище"></div>
-                    <p>Виберіть стілець :</p>
-                    <div><input id="first-answer" type="radio" name="answer" value="a1"><label for="first-answer">Без
-                            пік
-                            точених</label></div>
-                    <div><input id="second-answer" type="radio" name="answer" value="a1"><label for="second-answer">З
-                            піками
-                            точеними</label></div>
-                    <div><input id="third-answer" type="radio" name="answer" value="a1"><label
-                            for="third-answer">Візьму піки
-                            точені і зрубаю !№;%:*</label></div>
+                    <p>Виберіть стать:</p>
+                    <div><input id="first-answer" type="radio" name="answer" value="a1"><label for="first-answer">Чоловік
+                    </label></div>
+                    <div><input id="second-answer" type="radio" name="answer" value="a1"><label for="second-answer">Не чоловік
+                    </label></div>
+                    <div><input id="third-answer"  checked type="radio" name="answer" value="a1"><label
+                            for="third-answer">???</label></div>
                     <p>
                         <textarea cols="30" placeholder="Веддіть коментарій" rows="7"></textarea>
                     </p>
@@ -80,12 +77,12 @@
                         <option value="Шо поделать">Буду жити в Бікіні Боттом</option>
                     </select>
                     <p>
-                        Оцінити роботу
+                        Оберіть мову:
                     </p>
                     <div><input id="first-answer__checkbox" type="checkbox" name="answer" value="a1"><label
-                            for="first-answer__checkbox">Плюс</label></div>
+                            for="first-answer__checkbox">рідна</label></div>
                     <div><input id="second-answer__checkbox" type="checkbox" name="answer" value="a1"><label
-                            for="second-answer__checkbox">Буду жити в Бікіні Боттом</label></div>
+                            for="second-answer__checkbox">не рідна</label></div>
                     <div class="block3">
                         <a href="https://rozetka.com.ua/64973489/p64973489/"><button>Збільшити свою самооцінку</button>
                             </p></a>
